<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="3"
                android:text="@string/txv_server"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/editor_btn_del_channel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickSave"
                android:text="@string/btn_save" />
        </LinearLayout>

        <EditText
            android:id="@+id/etx_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:ems="10"
            android:hint="@string/etx_server" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="8dp"
                android:text="@string/txv_channels"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_fetch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickFetch"
                android:text="@string/btn_fetch" />
        </LinearLayout>

            <Button
                android:id="@+id/btn_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_select"
                android:onClick="onClickSelect" 
                android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="6dp"
            android:text="@string/txv_start_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etx_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="3"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="text" />

            <Button
                android:id="@+id/btn_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickTimeSet"
                android:text="@string/btn_set" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="6dp"
            android:text="@string/txv_end_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etx_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="text" />

            <Button
                android:id="@+id/btn_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickTimeSet"
                android:text="@string/btn_set" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="6dp"
            android:text="@string/txv_option"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3" >

            <Button
                android:id="@+id/btn_showTable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickShowTable"
                android:text="@string/btn_show_table" />

            <Button
                android:id="@+id/btn_drawGraph"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onClickDrawGraph"
                android:text="@string/btn_draw_graph" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <Button
                android:id="@+id/btn_editChannel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickEditChannel"
                android:text="@string/btn_edit_channel" />

            <Button
                android:id="@+id/btn_makeChannel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickMakeChannel"
                android:text="@string/btn_make_channel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>